--- a/Jenkins-Roboshop/roles/jenkins/templates/sjob.xml
+++ b/Jenkins-Roboshop/roles/jenkins/templates/sjob.xml
@@ -20,7 +20,7 @@
             <submoduleCfg class="empty-list"/>
             <extensions/>
         </scm>
-        <scriptPath>Jenkins/Jenkinsfile</scriptPath>
+        <scriptPath>Jenkinsfile</scriptPath>
         <lightweight>true</lightweight>
     </definition>
     <triggers/>
