--- a/Jenkins-Roboshop/roles/jenkins/templates/mjob.xml
+++ b/Jenkins-Roboshop/roles/jenkins/templates/mjob.xml
@@ -38,6 +38,6 @@
     </sources>
     <factory class="org.jenkinsci.plugins.workflow.multibranch.WorkflowBranchProjectFactory">
         <owner class="org.jenkinsci.plugins.workflow.multibranch.WorkflowMultiBranchProject" reference="../.."/>
-        <scriptPath>Jenkins/Jenkinsfile</scriptPath>
+        <scriptPath>Jenkinsfile</scriptPath>
     </factory>
 </org.jenkinsci.plugins.workflow.multibranch.WorkflowMultiBranchProject>
